# crill

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml
include/crill/: atomic_unique_ptr.h  bytewise_atomic_memcpy.h  platform.h  progressive_backoff_wait.h  reclaim_object.h  reclaim_on_write_object.h  seqlock_object.h  spin_mutex.h  utility.h  wait.h
include/crill/impl/: progressive_backoff_wait_impl.h  wait_platform_specific.h
include/doctest/: doctest.h
tests/: atomic_unique_ptr_test.cpp  bytewise_atomic_memcpy_test.cpp  main.cpp  progressive_backoff_wait_test.cpp  reclaim_object_test.cpp  reclaim_on_write_object_test.cpp  seqlock_object_test.cpp  spin_mutex_test.cpp  tests.h  utility_test.cpp  wait_test.cpp
